Improved resizing hero image and prevent browser dark mode override

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -45,7 +45,6 @@
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
-  text-overflow: ellipsis;
   display: inline-block;
   max-width: 100%;
 }
